--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: fishermancome
 ---
 
-<p>There is no end to learning.</p>
+<h1>Fisherman's Blog</h1>
+<p><a href="{{ site.url }}/about.html">关于</a></p>
