--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@ layout: page
 <h1>Fisherman's Blog</h1>
 <p><a href="{{ site.url }}/about.html">关于</a></p>
 
-<div>
-	{% for post in paginator.posts %}
+<ul class="posts">
+	{% for post in site.posts %}
 
-	<div class="content">
-		 {{ post.content |strip_html | truncatewords:35 }}
-	</div>
+	<li>
+		<a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+		<p>{{ post.date | date: "%B %-d, %Y" }}</p>
+	</li>
+		 
 
 {% endfor %}
-</div>
+</ul>
 
 
 <div class="pagination">
